--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "dependencies": {
     "@types/three": "^0.166.0",
-    "three": "^0.166.1"
-  },
-  "devDependencies": {
+    "three": "^0.166.1",
     "vite": "^5.3.3"
   }
 }
